#1: Grid/button/Divider/Container/image
Grid/button/Divider/Container/image

--- a/Grid1.html
+++ b/Grid1.html
@@ -39,7 +39,7 @@
       <div class="column">
           <img src="images/gintoki.png" alt="gintoki" class="ui image">
       </div>
-      <div class="column">Sakata Gintoki (坂田 銀時, Sakata Gintoki) is the main protagonist of the Gintama series. He is the founder and president of the Yorozuya and as well a highly skilled samurai, having fought in the Joui War in the past. During the war, he became known as the Shiroyasha (literally meaning "White Demon") due to his powerful swordsmanship and demonic white appearance. </div>
+      <div class="column"><p>Sakata Gintoki (坂田 銀時, Sakata Gintoki) is the main protagonist of the Gintama series. He is the founder and president of the Yorozuya and as well a highly skilled samurai, having fought in the Joui War in the past. During the war, he became known as the Shiroyasha (literally meaning "White Demon") due to his powerful swordsmanship and demonic white appearance.</p> </div>
   </div>
 
 </div>
